# Vaultec

./: .env.example  .gitignore  Caddyfile  DEPLOY_CHECKLIST.txt  README.md  docker-compose.yml  run.bat  run.ps1
backend/: Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/app/: ai.py  config.py  crypto.py  db.py  deps.py  ingest.py  main.py  models.py  pipeline.py  security.py  storage.py  vault.py
backend/app/routers/: admin.py  ai.py  auth.py  documents.py  validation.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_document_visibility.py  0003_document_status.py  0004_households.py  0005_ai_pipeline.py
deploy/: README.md  backup.sh  install.sh
docs/: ARCHITECTURE.md  SCANNER_SETUP.md
frontend/: README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
frontend/.svelte-kit/output/server/: index.js  manifest.js  remote-entry.js
frontend/.svelte-kit/types/: route_meta_data.json
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  utils.ts
frontend/src/lib/components/: Badge.svelte  BarChart.svelte  Button.svelte  Donut.svelte  Loader.svelte  Modal.svelte  Panel.svelte  ProgressBar.svelte  StatCard.svelte  StatusDot.svelte  Toast.svelte  index.ts
frontend/src/lib/stores/: session.svelte.ts  theme.svelte.ts  validation.svelte.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/inbox/: +page.svelte
frontend/src/routes/login/: +page.svelte
(+89 files in other folders)
